# lz77

./: Cargo.toml  README.md
src/: main.rs
tests/: fox.txt
